snbt